--- a/package.json
+++ b/package.json
@@ -8,14 +8,16 @@
   "license": "ISC",
   "scripts": {
     "clean": "rm dist/bundle.js",
-    "build-dev": "webpack -d --mode development",
+    "build-dev": "webpack -d --mode development --watch",
     "build-prod": "webpack -p --mode production",
     "start": "nodemon server/index.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
     "firebase": "^7.9.3",
     "react": "^16.12.0",
-    "react-dom": "^16.12.0"
+    "react-dom": "^16.12.0",
+    "react-router-dom": "^5.1.2"
   },
   "devDependencies": {
     "webpack": "^4.41.5",
