--- a/package.json
+++ b/package.json
@@ -15,8 +15,10 @@
   "dependencies": {
     "axios": "^0.19.2",
     "cors": "^2.8.5",
+    "express": "^4.17.1",
     "firebase": "^7.9.3",
     "firebase-admin": "^8.9.2",
+    "nodemon": "^2.0.2",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2"
