--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "firebase": "^7.9.3",
     "firebase-admin": "^8.9.2",
     "nodemon": "^2.0.2",
+    "pg-promise": "^10.4.4",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2"
