--- a/package.json
+++ b/package.json
@@ -10,7 +10,8 @@
     "clean": "rm dist/bundle.js",
     "build-dev": "webpack -d --mode development --watch",
     "build-prod": "webpack -p --mode production",
-    "start": "nodemon server/index.js"
+    "start": "nodemon server/index.js",
+    "start-prod": "pm2 start server/index.js"
   },
   "dependencies": {
     "axios": "^0.19.2",
@@ -20,6 +21,7 @@
     "firebase-admin": "^8.9.2",
     "nodemon": "^2.0.2",
     "pg-promise": "^10.4.4",
+    "pm2": "^4.2.3",
     "react": "^16.12.0",
     "react-dom": "^16.12.0",
     "react-router-dom": "^5.1.2"
